tooltip z-index fixed

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
 }
 
 main {
